--- a/default-logins/UCMDB/ucmdb-default-login.yaml
+++ b/default-logins/UCMDB/ucmdb-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         POST /ucmdb-ui/cms/loginRequest.do; HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
 
         customerID=1&isEncoded=false&userName=diagnostics&password={{base64(password)}}&ldapServerName=UCMDB
 
