--- a/default-logins/abb/cs141-default-login.yaml
+++ b/default-logins/abb/cs141-default-login.yaml
@@ -19,6 +19,7 @@ requests:
 
         "userName":{{username}},"password":{{password}}
 
+    attack: pitchfork
     payloads:
       username:
         - admin
@@ -28,7 +29,8 @@ requests:
         - cs141-snmp
         - engineer
         - guest
-    attack: pitchfork
+
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
