--- a/default-logins/alibaba/canal-default-login.yaml
+++ b/default-logins/alibaba/canal-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         POST /api/v1/user/login HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/json
 
         "username":{{username}},"password":{{password}}
