--- a/default-logins/ambari/ambari-default-login.yaml
+++ b/default-logins/ambari/ambari-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         GET /api/v1/users/admin?fields=*,privileges/PrivilegeInfo/cluster_name,privileges/PrivilegeInfo/permission_name HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Authorization: Basic {{base64(username + ':' + password)}}
     payloads:
       username:
