--- a/default-logins/arl/arl-default-login.yaml
+++ b/default-logins/arl/arl-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         POST /api/user/login HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/json; charset=UTF-8
 
         "username":{{username}},"password":{{password}}
