--- a/default-logins/axis2/axis2-default-login.yaml
+++ b/default-logins/axis2/axis2-default-login.yaml
@@ -10,14 +10,14 @@ requests:
   - raw:
       - |
         POST /axis2-admin/login HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
         loginUsername={{username}}&loginPassword={{password}}
 
       - |
         POST /axis2/axis2-admin/login HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
         userName={{username}}&password={{password}}&submit=+Login+
