--- a/default-logins/paloalto/panos-default-login.yaml
+++ b/default-logins/paloalto/panos-default-login.yaml
@@ -12,7 +12,7 @@ requests:
   - raw:
       - |
         POST /php/login.php HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
         user={{username}}&passwd={{password}}&challengePwd=&ok=Login
