--- a/default-logins/showdoc/showdoc-default-login.yaml
+++ b/default-logins/showdoc/showdoc-default-login.yaml
@@ -12,7 +12,7 @@ requests:
   - raw:
       - |
         POST /server/index.php?s=/api/user/login HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded;charset=UTF-8
 
         username={{username}}&password={{password}}&v_code=
