--- a/default-logins/szhe/szhe-default-login.yaml
+++ b/default-logins/szhe/szhe-default-login.yaml
@@ -12,7 +12,7 @@ requests:
   - raw:
       - |
         POST /login/ HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
         email={{username}}&password={{password}}&remeber=true
