--- a/default-logins/chinaunicom/chinaunicom-default-login.yaml
+++ b/default-logins/chinaunicom/chinaunicom-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         POST /cu.html HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
 
         "frashnum=&action=login&Frm_Logintoken=1&Username={{username}}&Password={{password}}&Username=&Password="
 
