--- a/default-logins/dell/dell-idrac-default-login.yaml
+++ b/default-logins/dell/dell-idrac-default-login.yaml
@@ -9,7 +9,7 @@ requests:
   - raw:
       - |
         POST /data/login HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
 
         user={{username}}&password={{password}}
 
