--- a/default-logins/dell/emcecom-default-login.yaml
+++ b/default-logins/dell/emcecom-default-login.yaml
@@ -12,7 +12,7 @@ requests:
   - raw:
       - |
         GET / HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Authorization: Basic {{base64(username + ':' + password)}}
 
     payloads:
