--- a/default-logins/druid/druid-default-login.yaml
+++ b/default-logins/druid/druid-default-login.yaml
@@ -10,13 +10,13 @@ requests:
   - raw:
       - |
         POST /druid/submitLogin HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
 
         loginUsername={{username}}&loginPassword={{password}}
 
       - |
         POST /submitLogin HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
 
         loginUsername={{username}}&loginPassword={{password}}
 
