--- a/default-logins/frps/frp-default-login.yaml
+++ b/default-logins/frps/frp-default-login.yaml
@@ -11,7 +11,7 @@ requests:
   - raw:
       - |
         GET /api/proxy/tcp HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Authorization: Basic {{base64(username + ':' + password)}}
 
     payloads:
