--- a/default-logins/idemia/idemia-biometrics-default-login.yaml
+++ b/default-logins/idemia/idemia-biometrics-default-login.yaml
@@ -12,7 +12,7 @@ requests:
   - raw:
       - |
         POST /cgi-bin/login.cgi HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
 
         password={{password}}
 
