--- a/default-logins/nagios/nagios-default-login.yaml
+++ b/default-logins/nagios/nagios-default-login.yaml
@@ -9,7 +9,7 @@ requests:
   - raw:
       - |
         GET /nagios/side.php HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Authorization: Basic {{base64(username + ':' + password)}}
 
     payloads:
