--- a/default-logins/nps/nps-default-login.yaml
+++ b/default-logins/nps/nps-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         POST /login/verify HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
         Referer: {{Hostname}}/login/index
 
