--- a/default-logins/ofbiz/ofbiz-default-login.yaml
+++ b/default-logins/ofbiz/ofbiz-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         POST /control/login HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
         USERNAME={{username}}&PASSWORD={{password}}&FTOKEN=&JavaScriptEnabled=Y
