--- a/default-logins/rabbitmq/rabbitmq-default-login.yaml
+++ b/default-logins/rabbitmq/rabbitmq-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         GET /api/whoami HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
         Authorization: Basic {{base64(username + ':' + password)}}
 
