--- a/default-logins/samsung/samsung-wlan-default-login.yaml
+++ b/default-logins/samsung/samsung-wlan-default-login.yaml
@@ -11,7 +11,7 @@ requests:
   - raw:
       - |
         POST /main.ehp HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
 
         "httpd;General;lang=en&login_id={{username}}&login_pw={{password}}"
 
