--- a/default-logins/solarwinds/solarwinds-default-login.yaml
+++ b/default-logins/solarwinds/solarwinds-default-login.yaml
@@ -15,12 +15,12 @@ requests:
   - raw:
       - |
         GET /SolarWinds/InformationService/v3/Json/Query?query=SELECT+Uri+FROM+Orion.Pollers+ORDER+BY+PollerID+WITH+ROWS+1+TO+3+WITH+TOTALROWS HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Authorization: Basic {{base64(username)}}
 
       - |
         GET /InformationService/v3/Json/Query?query=SELECT+Uri+FROM+Orion.Pollers+ORDER+BY+PollerID+WITH+ROWS+1+TO+3+WITH+TOTALROWS HTTP/1.1
-        Host: {{BaseURL}}
+        Host: {{Hostname}}
         Authorization: Basic {{base64(username)}}
 
     payloads:
