--- a/default-logins/grafana/grafana-default-login.yaml
+++ b/default-logins/grafana/grafana-default-login.yaml
@@ -21,15 +21,15 @@ requests:
 
         {"user":"{{username}}","password":"{{password}}"}
 
-
+    attack: pitchfork
     payloads:
       username:
         - admin
+        - admin
+
       password:
         - prom-operator
         - admin
-
-    attack: sniper
 
     matchers-condition: and
     matchers:
