--- a/default-logins/aem/aem-default-login.yaml
+++ b/default-logins/aem/aem-default-login.yaml
@@ -4,7 +4,7 @@ info:
   name: Adobe AEM Default Login
   author: random-robbie
   severity: critical
-  tags: aem,default-login,fuzz
+  tags: aem,default-login
 
 requests:
   - raw:
@@ -15,23 +15,22 @@ requests:
         Origin: {{BaseURL}}
         Referer: {{BaseURL}}/libs/granite/core/content/login.html
 
-        _charset_=utf-8&j_username={{rr_username}}&j_password={{rr_password}}&j_validate=true
+        _charset_=utf-8&j_username={{aem_user}}&j_password={{aem_pass}}&j_validate=true
 
+    attack: pitchfork
     payloads:
-
-      rr_username:
+      aem_user:
         - admin
         - grios
         - replication-receiver
         - vgnadmin
 
-      rr_password:
+      aem_pass:
         - admin
         - password
         - replication-receiver
         - vgnadmin
 
-    attack: pitchfork  # Available options: sniper, pitchfork and clusterbomb
     stop-at-first-match: true
     matchers-condition: and
     matchers:
@@ -41,7 +40,7 @@ requests:
 
       - type: word
         part: header
+        condition: and
         words:
           - login-token
           - crx.default
-        condition: and
