--- a/default-logins/apache/superset-default-login.yaml
+++ b/default-logins/apache/superset-default-login.yaml
@@ -21,18 +21,18 @@ requests:
         Content-Type: application/x-www-form-urlencoded
         Referer: {{BaseURL}}/admin/airflow/login
 
-        csrf_token={{csrff_token}}&username={{username}}&password={{password}}
+        csrf_token={{csrf_token}}&username={{username}}&password={{password}}
 
+    attack: pitchfork
     payloads:
       username:
         - admin
       password:
         - admin
-    attack: pitchfork
 
     extractors:
       - type: regex
-        name: csrff_token
+        name: csrf_token
         group: 1
         part: body
         internal: true
