--- a/default-logins/samsung/samsung-wlan-default-login.yaml
+++ b/default-logins/samsung/samsung-wlan-default-login.yaml
@@ -13,7 +13,7 @@ requests:
         POST /main.ehp HTTP/1.1
         Host: {{Hostname}}
 
-        "httpd;General;lang=en&login_id={{username}}&login_pw={{password}}"
+        httpd;General;lang=en&login_id={{username}}&login_pw={{password}}
 
     payloads:
       username:
@@ -25,10 +25,11 @@ requests:
     matchers-condition: and
     matchers:
       - type: word
+        part: body
         words:
           - "document.formParent2.changepasswd1.value"
           - "passwd_change.ehp"
-        part: body
+
       - type: status
         status:
           - 200
