--- a/default-logins/chinaunicom/chinaunicom-default-login.yaml
+++ b/default-logins/chinaunicom/chinaunicom-default-login.yaml
@@ -12,20 +12,21 @@ requests:
         POST /cu.html HTTP/1.1
         Host: {{Hostname}}
 
-        "frashnum=&action=login&Frm_Logintoken=1&Username={{username}}&Password={{password}}&Username=&Password="
+        frashnum=&action=login&Frm_Logintoken=1&Username={{username}}&Password={{password}}&Username=&Password=
 
+    attack: pitchfork
     payloads:
       username:
         - CUAdmin
       password:
         - CUAdmin
-    attack: pitchfork
 
     matchers-condition: and
     matchers:
       - type: status
         status:
           - 302
+
       - type: word
         words:
           - "/menu.gch"
