--- a/default-logins/arl/arl-default-login.yaml
+++ b/default-logins/arl/arl-default-login.yaml
@@ -13,7 +13,7 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/json; charset=UTF-8
 
-        "username":{{username}},"password":{{password}}
+        {"username":{{username}},"password":{{password}}}
 
     payloads:
       username:
@@ -26,11 +26,12 @@ requests:
     matchers:
 
       - type: word
+        condition: and
         words:
           - '"message": "success"'
           - '"username": "admin"'
           - '"type": "login"'
-        condition: and
+
       - type: status
         status:
           - 200
