--- a/default-logins/arl/arl-default-login.yaml
+++ b/default-logins/arl/arl-default-login.yaml
@@ -13,7 +13,7 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/json; charset=UTF-8
 
-        {"username":{{username}},"password":{{password}}}
+        {"username":"{{username}}","password":"{{password}}"}
 
     payloads:
       username:
