--- a/default-logins/abb/cs141-default-login.yaml
+++ b/default-logins/abb/cs141-default-login.yaml
@@ -17,15 +17,15 @@ requests:
         Accept: application/json, text/plain, */*
         Content-Type: application/json
 
-        "userName":{{username}},"password":{{password}}
+        {"userName":"{{user}}","password":"{{pass}}"}
 
     attack: pitchfork
     payloads:
-      username:
+      user:
         - admin
         - engineer
         - guest
-      password:
+      pass:
         - cs141-snmp
         - engineer
         - guest
