--- a/default-logins/alibaba/canal-default-login.yaml
+++ b/default-logins/alibaba/canal-default-login.yaml
@@ -13,22 +13,23 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/json
 
-        "username":{{username}},"password":{{password}}
+        {"username":"{{user}}","password":"{{pass}}"}
 
-    payloads:
-      username:
-        - admin
-      password:
-        - 123456
     attack: pitchfork
+    payloads:
+      user:
+        - admin
+      pass:
+        - 123456
 
     matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
+
       - type: word
+        condition: and
         words:
           - 'data":{"token"'
           - '"code":20000'
-        condition: and
