--- a/exposed-panels/lansweeper-login.yaml
+++ b/exposed-panels/lansweeper-login.yaml
@@ -10,14 +10,17 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/login.aspx"
+      - "{{BaseURL}}/favicon.ico"
 
+    stop-at-first-match: true
+    matchers-condition: or
     matchers:
-      - type: regex
-        regex:
-          - <title>[\s\S]*?Lansweeper - Login[\s\S]*?<\/title>
-        condition: or
-        
+      - type: word
+        name: login
+        words:
+          - "Lansweeper - Login"
+
       - type: dsl
-        name: lansweeper
+        name: favicon
         dsl:
-          - "len(body)==15086 && status_code==200 && (\"0A60C945E674EC7B953429B515519567\" == md5(body))"
+          - "status_code==200 && (\"1847799946\" == mmh3(base64_py(body)))"
