--- a/misconfiguration/unauthenticated-lansweeper.yaml
+++ b/misconfiguration/unauthenticated-lansweeper.yaml
@@ -12,6 +12,6 @@ requests:
       - "{{BaseURL}}/Default.aspx"
 
     matchers:
-      - type: regex
-        regex:
-          - <title>[\s\S]*?Main page - Lansweeper[\s\S]*?<\/title>
+      - type: word
+        words:
+          - "Main page - Lansweeper"
