--- a/file/electron/electron-version-detect.yaml
+++ b/file/electron/electron-version-detect.yaml
@@ -5,10 +5,7 @@ info:
   author: me9187
   severity: info
   tags: electron,file
-  reference:
-    - https://www.electronjs.org/blog/chromium-rce-vulnerability/
-  # Check the electron version on snyk.io to see if the bundled chromium version is outdated
-  # If the chromium version is old you can turn XSS into RCE
+  reference: https://www.electronjs.org/blog/chromium-rce-vulnerability/
 
 file:
   - extensions:
