--- a/default-logins/UCMDB/ucmdb-default-login.yaml
+++ b/default-logins/UCMDB/ucmdb-default-login.yaml
@@ -12,7 +12,7 @@ requests:
         POST /ucmdb-ui/cms/loginRequest.do; HTTP/1.1
         Host: {{Hostname}}
 
-        customerID=1&isEncoded=false&userName=diagnostics&password={{base64(password)}}&ldapServerName=UCMDB
+        customerID=1&isEncoded=false&userName={{username}}&password={{base64(password)}}&ldapServerName=UCMDB
 
     payloads:
       username:
@@ -26,7 +26,8 @@ requests:
       - type: status
         status:
           - 200
+
       - type: word
+        part: header
         words:
           - "LWSSO_COOKIE_KEY"
-        part: header
