--- a/default-logins/zabbix/zabbix-default-login.yaml
+++ b/default-logins/zabbix/zabbix-default-login.yaml
@@ -10,7 +10,7 @@ requests:
   - raw:
       - |
         POST /index.php HTTP/1.1
-        Host:{{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded; charset=UTF-8
         X-Requested-With: XMLHttpRequest
 
