--- a/default-logins/zmanda/zmanda-default-login.yaml
+++ b/default-logins/zmanda/zmanda-default-login.yaml
@@ -12,7 +12,7 @@ requests:
   - raw:
       - |
         POST /ZMC_Admin_Login HTTP/1.1
-        Host:{{BaseURL}}
+        Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
         Cookie: zmc_cookies_enabled=true
 
