--- a/exposed-panels/hpe-system-management-login.yaml
+++ b/exposed-panels/hpe-system-management-login.yaml
@@ -1,10 +1,10 @@
-id: hpe-system-management-homepage-login
+id: hpe-system-management-login
 
 info:
-  name: HPE System Management Homepage Login
+  name: HPE System Management Login
   author: divya_mudgal
   severity: info
-  tags: HPE-System-Management-Homepage,tech,panel
+  tags: hp,tech,panel
 
 requests:
   - method: GET
@@ -14,11 +14,10 @@ requests:
     matchers-condition: and
     matchers:
       - type: word
+        condition: and
+        part: body
         words:
-          - "smhversion = \"HPE System Management Homepage "
-
-      - type: word
-        words:
+          - "HPE System Management Homepage"
           - "/proxy/ssllogin"
 
     extractors:
