--- a/vulnerabilities/fastjson/fastjson-1.2.68-rce.yaml
+++ b/vulnerabilities/fastjson/fastjson-1.2.68-rce.yaml
@@ -48,3 +48,8 @@ requests:
         part: interactsh_protocol   # Confirms DNS Interaction
         words:
           - "dns"
+
+      - type: status
+        negative: true
+        status:
+          - 200
