--- a/vulnerabilities/fastjson/fastjson-1.2.43-rce.yaml
+++ b/vulnerabilities/fastjson/fastjson-1.2.43-rce.yaml
@@ -28,3 +28,8 @@ requests:
         part: interactsh_protocol   # Confirms DNS Interaction
         words:
           - "dns"
+
+      - type: status
+        negative: true
+        status:
+          - 200
