--- a/vulnerabilities/fastjson/fastjson-1.2.62-rce.yaml
+++ b/vulnerabilities/fastjson/fastjson-1.2.62-rce.yaml
@@ -27,3 +27,8 @@ requests:
         part: interactsh_protocol   # Confirms DNS Interaction
         words:
           - "dns"
+
+      - type: status
+        negative: true
+        status:
+          - 200
