Update and rename technologies/rancher-detect.yaml to exposed-panels/rancher-panel.yaml

--- a/exposed-panels/rancher-panel.yaml
+++ b/exposed-panels/rancher-panel.yaml
@@ -1,10 +1,10 @@
-id: rancher-detect
+id: rancher-panel
 
 info:
-  name: Rancher Detect
+  name: Rancher Login Panel
   author: princechaddha
   severity: info
-  tags: tech,rancher
+  tags: panel,rancher,kubernetes,devops,cloud
 
 requests:
   - method: GET
