--- a/exposed-panels/rancher-panel.yaml
+++ b/exposed-panels/rancher-panel.yaml
@@ -4,6 +4,8 @@ info:
   name: Rancher Login Panel
   author: princechaddha
   severity: info
+  description: Rancher is a open-source multi-cluster orchestration platform, lets operations teams deploy, manage and secure enterprise Kubernetes.
+  reference: https://github.com/rancher/rancher
   tags: panel,rancher,kubernetes,devops,cloud
 
 requests:
