Update and rename google-earth-enterprise-default-creds.yaml to google-earth-dlogin.yaml

--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -1,9 +1,9 @@
-id: google-earth-default-login
+id: google-earth-dlogin
 info:
   name: Google Earth Enterprise Default Login
-  author: orpheus, johnjhacking
+  author: orpheus,johnjhacking
   severity: high
-  tags: default-login
+  tags: default-login,google-earth
 
 requests:
   - raw:
@@ -11,6 +11,7 @@ requests:
         GET /admin/ HTTP/1.1
         Host: {{Hostname}}
         Authorization: Basic {{base64(username + ':' + password)}}
+
     payloads:
       username:
         - geapacheuser
