Add extra string check

--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -26,3 +26,7 @@ requests:
       - type: status
         status:
           - 200
+     - type: word
+        condition: and
+        words:
+          - 'DashboardPanel'
