--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -1,9 +1,10 @@
 id: google-earth-dlogin
+
 info:
   name: Google Earth Enterprise Default Login
   author: orpheus,johnjhacking
   severity: high
-  tags: default-login,google-earth
+  tags: default-login,google
 
 requests:
   - raw:
@@ -12,6 +13,7 @@ requests:
         Host: {{Hostname}}
         Authorization: Basic {{base64(username + ':' + password)}}
 
+    attack: pitchfork
     payloads:
       username:
         - geapacheuser
@@ -19,14 +21,12 @@ requests:
       password:
         - geeadmin
 
-    attack: pitchfork
-
     matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
-     - type: word
-        condition: and
+
+      - type: word
         words:
           - 'DashboardPanel'
