--- a/vulnerabilities/other/opensis-lfi.yaml
+++ b/vulnerabilities/other/opensis-lfi.yaml
@@ -4,6 +4,7 @@ info:
   name: openSIS 5.1 - 'ajax.php' Local File Inclusion
   author: pikpikcu
   severity: high
+  description: An attacker can exploit this vulnerability to obtain potentially sensitive information and execute arbitrary local scripts in the context of the Web server process. This may allow the attacker to compromise the application and computer; other attacks are also possible.
   reference:
     - https://www.exploit-db.com/exploits/38039
   tags: opensis,lfi
