--- a/misconfiguration/hpe-system-management-anonymous.yaml
+++ b/misconfiguration/hpe-system-management-anonymous.yaml
@@ -4,7 +4,7 @@ info:
   name: HPE System Management Anonymous Access
   author: divya_mudgal
   severity: low
-  tags: hp,unauth,anonymous
+  tags: hp,unauth
 
 requests:
   - method: GET
