--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -5,6 +5,8 @@ info:
   author: orpheus,johnjhacking
   severity: high
   tags: default-login,google
+  metadata:
+    shodan-dork: 'title:"GEE Server"'
 
 requests:
   - raw:
@@ -28,5 +30,7 @@ requests:
           - 200
 
       - type: word
+        condition: and
         words:
           - 'DashboardPanel'
+          - 'Earth Enterprise Server'
