--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -5,6 +5,7 @@ info:
   author: orpheus,johnjhacking
   severity: high
   tags: default-login,google
+  reference: https://www.opengee.org/geedocs/5.2.2/answer/3470759.html
   metadata:
     shodan-dork: 'title:"GEE Server"'
 
