--- a/technologies/confluence-detect.yaml
+++ b/technologies/confluence-detect.yaml
@@ -7,6 +7,9 @@ info:
   description: Allows you to detect Atlassian Confluence instances
   tags: tech,confluence
 
+metadata:
+    shodan-query: https://www.shodan.io/search?query=http.component%3A%22atlassian+confluence%22
+
 requests:
   - method: GET
     path:
