--- a/technologies/confluence-detect.yaml
+++ b/technologies/confluence-detect.yaml
@@ -5,10 +5,9 @@ info:
   author: philippedelteil
   severity: info
   description: Allows you to detect Atlassian Confluence instances
-  tags: tech,confluence
-
-metadata:
-    shodan-query: https://www.shodan.io/search?query=http.component%3A%22atlassian+confluence%22
+  tags: tech,confluence,atlassian
+  metadata:
+    shodan-query: https://www.shodan.io/search?query=http.component%3A%22atlassian+confluence%22    
 
 requests:
   - method: GET
