--- a/vulnerabilities/wordpress/cherry-file-download.yaml
+++ b/vulnerabilities/wordpress/cherry-file-download.yaml
@@ -1,11 +1,14 @@
-id: wp-cherry-plugin-file-download
+id: cherry-file-download
 
 info:
   name: Cherry Plugin < 1.2.7 - Unauthenticated Arbitrary File Download
   author: 0x_Akoko
   severity: high
-  tags: wordpress,wp-plugin,lfi,wp
-  reference: https://wpscan.com/vulnerability/90034817-dee7-40c9-80a2-1f1cd1d033ee
+  description: The cherry plugin WordPress plugin was affected by an unauthenticated file upload and download vulnerability, allowing attackers to upload and download arbitrary files. This could result in attacker uploading backdoor shell scripts or downloading the wp-config.php file.
+  reference:
+    - https://wpscan.com/vulnerability/90034817-dee7-40c9-80a2-1f1cd1d033ee
+    - https://github.com/CherryFramework/cherry-plugin
+  tags: wordpress,wp-plugin,lfi
 
 requests:
   - method: GET
