Update and rename aspose-words-exporter-file-download.yaml to vulnerabilities/wordpress/aspose-words-file-download.yaml

--- a/vulnerabilities/wordpress/aspose-words-file-download.yaml
+++ b/vulnerabilities/wordpress/aspose-words-file-download.yaml
@@ -1,11 +1,14 @@
-id: aspose-words-exporter-file-download
+id: aspose-words-file-download
 
 info:
   name: Aspose Words Exporter < 2.0 - Unauthenticated Arbitrary File Download
   author: 0x_Akoko
   severity: high
-  tags: wordpress,wp-plugin,lfi,wp
-  reference: https://wpscan.com/vulnerability/7869
+  description: The Aspose.Words Exporter WordPress plugin is affected by an Arbitrary File Download security vulnerability.
+  reference:
+    - https://wpscan.com/vulnerability/7869
+    - https://wordpress.org/plugins/aspose-doc-exporter
+  tags: wordpress,wp-plugin,lfi
 
 requests:
   - method: GET
