--- a/vulnerabilities/other/ecoa-building-lfi.yaml
+++ b/vulnerabilities/other/ecoa-building-lfi.yaml
@@ -5,8 +5,10 @@ info:
   author: gy741
   severity: high
   description: The BAS controller suffers from a directory traversal content disclosure vulnerability. Using the GET parameter cpath in File Manager (fmangersub), attackers can disclose directory content on the affected device
-  reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5670.php
-  tags: ecoa,lfi
+  reference: 
+    - https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5670.php
+    - https://www.twcert.org.tw/en/cp-139-5140-6343c-2.html
+  tags: ecoa,lfi,cve-2021-41291
 
 requests:
   - raw:
