--- a/vulnerabilities/other/geovision-geowebserver-lfi.yaml
+++ b/vulnerabilities/other/geovision-geowebserver-lfi.yaml
@@ -4,6 +4,7 @@ info:
   name: GeoVision Geowebserver 5.3.3 - LFI
   author: madrobot
   severity: high
+  description: A vulnerability in GeoVision Geowebserver allows remote unauthenticated attackers to disclose the content of locally stored files.
   reference: https://www.exploit-db.com/exploits/50211
   tags: geowebserver,lfi
 
