--- a/vulnerabilities/other/geovision-geowebserver-lfi.yaml
+++ b/vulnerabilities/other/geovision-geowebserver-lfi.yaml
@@ -5,7 +5,7 @@ info:
   author: madrobot
   severity: high
   description: A vulnerability in GeoVision Geowebserver allows remote unauthenticated attackers to disclose the content of locally stored files.
-  reference: https://www.exploit-db.com/exploits/50211
+  reference: https://packetstormsecurity.com/files/163860/geovisiongws533-lfixssxsrfexec.txt
   tags: geowebserver,lfi
 
 requests:
