--- a/vulnerabilities/other/h3c-imc-rce.yaml
+++ b/vulnerabilities/other/h3c-imc-rce.yaml
@@ -1,7 +1,7 @@
 id: h3c-imc-rce
 
 info:
-  name: H3c IMC Rce
+  name: H3c IMC RCE
   author: pikpikcu
   severity: critical
   reference: https://mp.weixin.qq.com/s/BP9_H3lpluqIwL5OMIJlIw
