--- a/vulnerabilities/other/h3c-imc-rce.yaml
+++ b/vulnerabilities/other/h3c-imc-rce.yaml
@@ -4,7 +4,7 @@ info:
   name: H3c IMC RCE
   author: pikpikcu
   severity: critical
-  description: A vulnerability in H3C IMC allows remote unauthenticated attackers to cause the remote web application to execute arbitary commands via the 'dynamiccontent.properties.xhtml' endpoint
+  description: A vulnerability in H3C IMC allows remote unauthenticated attackers to cause the remote web application to execute arbitrary commands via the 'dynamiccontent.properties.xhtml' endpoint
   reference: https://mp.weixin.qq.com/s/BP9_H3lpluqIwL5OMIJlIw
   tags: rce,h3c-imc
 
