--- a/vulnerabilities/other/ecoa-building-automation-lfd.yaml
+++ b/vulnerabilities/other/ecoa-building-automation-lfd.yaml
@@ -3,6 +3,7 @@ info:
   name: ECOA Building Automation System - LFD
   author: 0x_Akoko
   severity: high
+  description: The BAS controller suffers from an arbitrary file disclosure vulnerability. Using the 'fname' POST parameter in viewlog.jsp, attackers can disclose arbitrary files on the affected device and disclose sensitive and system information.
   reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php
   tags: ecoa,lfi
 
