--- a/vulnerabilities/other/ecoa-building-automation-lfd.yaml
+++ b/vulnerabilities/other/ecoa-building-automation-lfd.yaml
@@ -5,7 +5,7 @@ info:
   severity: high
   description: The BAS controller suffers from an arbitrary file disclosure vulnerability. Using the 'fname' POST parameter in viewlog.jsp, attackers can disclose arbitrary files on the affected device and disclose sensitive and system information.
   reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php
-  tags: ecoa,lfi
+  tags: ecoa,lfi,cve-2021-41293
 
 requests:
   - raw:
