--- a/vulnerabilities/other/ecoa-building-automation-lfd.yaml
+++ b/vulnerabilities/other/ecoa-building-automation-lfd.yaml
@@ -4,7 +4,9 @@ info:
   author: 0x_Akoko
   severity: high
   description: The BAS controller suffers from an arbitrary file disclosure vulnerability. Using the 'fname' POST parameter in viewlog.jsp, attackers can disclose arbitrary files on the affected device and disclose sensitive and system information.
-  reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php
+  reference:
+    - https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php
+    - https://www.twcert.org.tw/tw/cp-132-5129-7e623-1.html
   tags: ecoa,lfi,cve-2021-41293
 
 requests:
