--- a/vulnerabilities/other/geovision-geowebserver-xss.yaml
+++ b/vulnerabilities/other/geovision-geowebserver-xss.yaml
@@ -4,7 +4,7 @@ info:
   name: GeoVision Geowebserver 5.3.3 - XSS
   author: madrobot
   severity: medium
-  reference: https://www.exploit-db.com/exploits/50211
+  reference: https://packetstormsecurity.com/files/163860/geovisiongws533-lfixssxsrfexec.txt
   tags: geowebserver,xss
 
 requests:
