Adding self contained template identifier

--- a/token-spray/buttercms.yaml
+++ b/token-spray/buttercms.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://api.buttercms.com/v2/posts/?auth_token={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
