--- a/token-spray/deviantart.yaml
+++ b/token-spray/deviantart.yaml
@@ -13,6 +13,7 @@ requests:
       - "https://www.deviantart.com/api/v1/oauth2/placebo"
     body: "access_token={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
