--- a/token-spray/google-directions.yaml
+++ b/token-spray/google-directions.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://maps.googleapis.com/maps/api/directions/json?origin=Disneyland&destination=Universal+Studios+Hollywood4&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
