--- a/token-spray/google-elevation.yaml
+++ b/token-spray/google-elevation.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://maps.googleapis.com/maps/api/elevation/json?locations=39.7391536,-104.9847034&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
