--- a/token-spray/google-fcm.yaml
+++ b/token-spray/google-fcm.yaml
@@ -15,6 +15,7 @@ requests:
       Authorization: key={{token}}
       Content-Type: application/json
 
+    self-contained: true
     matchers:
       - type: status
         status:
