--- a/token-spray/google-geocode.yaml
+++ b/token-spray/google-geocode.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://maps.googleapis.com/maps/api/geocode/json?latlng=40,30&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
