--- a/token-spray/google-geolocation.yaml
+++ b/token-spray/google-geolocation.yaml
@@ -12,6 +12,7 @@ requests:
       - "https://www.googleapis.com/geolocation/v1/geolocate?key={{token}}"
     matchers-condition: and
 
+    self-contained: true
     matchers:
       - type: word
         part: body
