--- a/token-spray/google-mapsembedadvanced.yaml
+++ b/token-spray/google-mapsembedadvanced.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://www.google.com/maps/embed/v1/search?q=record+stores+in+Seattle&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
