--- a/token-spray/google-nearestroads.yaml
+++ b/token-spray/google-nearestroads.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://roads.googleapis.com/v1/nearestRoads?points=60.170880,24.942795|60.170879,24.942796|60.170877,24.942796&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
