--- a/token-spray/google-playablelocations.yaml
+++ b/token-spray/google-playablelocations.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://playablelocations.googleapis.com/v3:samplePlayableLocations?key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
