--- a/token-spray/google-routetotraveled.yaml
+++ b/token-spray/google-routetotraveled.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://roads.googleapis.com/v1/snapToRoads?path=-35.27801,149.12958|-35.28032,149.12907&interpolate=true&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
