--- a/token-spray/google-speedlimit.yaml
+++ b/token-spray/google-speedlimit.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://roads.googleapis.com/v1/speedLimits?path=38.75807927603043,-9.03741754643809&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
