--- a/token-spray/google-timezone.yaml
+++ b/token-spray/google-timezone.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://maps.googleapis.com/maps/api/timezone/json?location=39.6034810,-119.6822510&timestamp=1331161200&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
