--- a/token-spray/heroku.yaml
+++ b/token-spray/heroku.yaml
@@ -15,6 +15,7 @@ requests:
       Accept: application/vnd.heroku+json; version=3
       Authorization: Bearer {{token}}
 
+    self-contained: true
     matchers:
       - type: status
         status:
