--- a/token-spray/hubspot.yaml
+++ b/token-spray/hubspot.yaml
@@ -13,6 +13,7 @@ requests:
       - "https://api.hubapi.com/owners/v2/owners?hapikey={{token}}"
       - "https://api.hubapi.com/contacts/v1/lists/all/contacts/all?hapikey={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
