--- a/token-spray/instagram.yaml
+++ b/token-spray/instagram.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://graph.facebook.com/v8.0/me/accounts?access_token={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
