--- a/token-spray/ipstack.yaml
+++ b/token-spray/ipstack.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://api.ipstack.com/8.8.8.8?access_key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
