--- a/token-spray/iterable.yaml
+++ b/token-spray/iterable.yaml
@@ -14,6 +14,7 @@ requests:
     headers:
       Api_Key: "{{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
