--- a/token-spray/lokalise.yaml
+++ b/token-spray/lokalise.yaml
@@ -14,6 +14,7 @@ requests:
     headers:
       X-Api-Token: "{{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
