--- a/token-spray/loqate.yaml
+++ b/token-spray/loqate.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "api.addressy.com/Capture/Interactive/Find/v1.00/json3.ws?Key={{token}}&Countries=US,CA&Language=en&Limit=5&Text=BHAR"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
