--- a/token-spray/nerdgraph.yaml
+++ b/token-spray/nerdgraph.yaml
@@ -16,6 +16,7 @@ requests:
       API-Key: "{{token}}"
     body: "{ \"query\":  \"{ requestContext { userId apiKey }}\" }"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
