--- a/token-spray/openweather.yaml
+++ b/token-spray/openweather.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://api.openweathermap.org/data/2.5/weather?q=Chicago&appid={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
