--- a/token-spray/pendo.yaml
+++ b/token-spray/pendo.yaml
@@ -16,6 +16,7 @@ requests:
       Content-Type: application/json
       X-Pendo-Integration-Key: "{{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
