--- a/token-spray/postmark.yaml
+++ b/token-spray/postmark.yaml
@@ -15,6 +15,7 @@ requests:
       Accept: application/json
       X-Postmark-Server-Token: "{{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
