--- a/token-spray/sendgrid.yaml
+++ b/token-spray/sendgrid.yaml
@@ -16,6 +16,7 @@ network:
     host:
       - "tls://smtp.sendgrid.net:465"
 
+    self-contained: true
     matchers:
       - type: word
         words:
