--- a/token-spray/sonarcloud.yaml
+++ b/token-spray/sonarcloud.yaml
@@ -14,6 +14,7 @@ requests:
     headers:
       Authorization: Basic {{base64(token + ':')}}
 
+    self-contained: true
     matchers:
       - type: word
         part: body
