--- a/token-spray/square.yaml
+++ b/token-spray/square.yaml
@@ -16,6 +16,7 @@ requests:
       Content-Type: application/json
       Authorization: Bearer {{token}}
 
+    self-contained: true
     matchers:
       - type: word
         part: body
