--- a/token-spray/travisci.yaml
+++ b/token-spray/travisci.yaml
@@ -15,6 +15,7 @@ requests:
       Travis-API-Version: 3
       Authorization: token {{token}}
 
+    self-contained: true
     matchers:
       - type: status
         status:
