--- a/token-spray/youtube.yaml
+++ b/token-spray/youtube.yaml
@@ -13,6 +13,7 @@ requests:
       - "https://www.googleapis.com/youtube/v3/activities?part=contentDetails&maxResults=25&channelId=UC-lHJZR3Gqxm24_Vd_AJ5Yw&key={{token}}"
     matchers-condition: or
 
+    self-contained: true
     matchers:
       - type: word
         part: body
