--- a/token-spray/asana.yaml
+++ b/token-spray/asana.yaml
@@ -14,6 +14,7 @@ requests:
     headers:
       Authorization: Bearer {{token}}
 
+    self-contained: true
     matchers:
       - type: status
         status:
