--- a/token-spray/bingmaps.yaml
+++ b/token-spray/bingmaps.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://dev.virtualearth.net/REST/v1/Locations?CountryRegion=US&adminDistrict=WA&locality=Somewhere&postalCode=98001&addressLine=100%20Main%20St.&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
