--- a/token-spray/bitly.yaml
+++ b/token-spray/bitly.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://api-ssl.bitly.com/v3/shorten?access_token={{token}}&longUrl=https://www.google.com"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
