--- a/token-spray/circleci.yaml
+++ b/token-spray/circleci.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://circleci.com/api/v1.1/me?circle-token={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
