--- a/token-spray/google-autocomplete.yaml
+++ b/token-spray/google-autocomplete.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://maps.googleapis.com/maps/api/place/autocomplete/json?input=Bingh&types=%28cities%29&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
