--- a/token-spray/google-customsearch.yaml
+++ b/token-spray/google-customsearch.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://www.googleapis.com/customsearch/v1?cx=017576662512468239146:omuauf_lfve&q=lectures&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
