--- a/token-spray/google-mapsembed.yaml
+++ b/token-spray/google-mapsembed.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://www.google.com/maps/embed/v1/place?q=Seattle&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
