--- a/token-spray/google-staticmaps.yaml
+++ b/token-spray/google-staticmaps.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://maps.googleapis.com/maps/api/staticmap?center=45%2C10&zoom=7&size=400x400&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
