--- a/token-spray/google-streetview.yaml
+++ b/token-spray/google-streetview.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "https://maps.googleapis.com/maps/api/streetview?size=400x400&location=40.720032,-73.988354&fov=90&heading=235&pitch=10&key={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
