--- a/token-spray/jumpcloud.yaml
+++ b/token-spray/jumpcloud.yaml
@@ -14,6 +14,7 @@ requests:
     headers:
       X-Api-Key: "{{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
