--- a/token-spray/mailchimp.yaml
+++ b/token-spray/mailchimp.yaml
@@ -14,6 +14,7 @@ network:
     host:
       - "tls://smtp.mandrillapp.com:465"
 
+    self-contained: true
     matchers:
       - type: word
         words:
