--- a/token-spray/mailgun.yaml
+++ b/token-spray/mailgun.yaml
@@ -14,6 +14,7 @@ requests:
     headers:
       Authorization: Basic {{base64('api:' + token)}}
 
+    self-contained: true
     matchers:
       - type: status
         status:
