--- a/token-spray/mapbox.yaml
+++ b/token-spray/mapbox.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://api.mapbox.com/geocoding/v5/mapbox.places/Los%20Angeles.json?access_token={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
