--- a/token-spray/pagerduty.yaml
+++ b/token-spray/pagerduty.yaml
@@ -15,6 +15,7 @@ requests:
       Accept: application/vnd.pagerduty+json;version=2
       Authorization: Token token={{token}}
 
+    self-contained: true
     matchers:
       - type: status
         status:
