--- a/token-spray/pivotaltracker.yaml
+++ b/token-spray/pivotaltracker.yaml
@@ -14,6 +14,7 @@ requests:
     headers:
       X-TrackerToken: "{{token}}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
