--- a/token-spray/wakatime.yaml
+++ b/token-spray/wakatime.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "https://wakatime.com/api/v1/users/current/projects/?api_key={{token}}"
 
+    self-contained: true
     matchers:
       - type: status
         status:
