--- a/token-spray/weglot.yaml
+++ b/token-spray/weglot.yaml
@@ -15,6 +15,7 @@ requests:
       Content-Type: application/json
     body: "{\"l_from\":\"en\",\"l_to\":\"fr\",\"request_url\":\"https://www.website.com/\",\"words\":[{\"w\":\"This is a blue car\",\"t\":1},{\"w\":\"This is a black car\",\"t\":1}]}"
 
+    self-contained: true
     matchers:
       - type: word
         part: body
