new versions of gitlab do not have a blank in between the anti-csrf meta tag

--- a/vulnerabilities/gitlab/gitlab-rce.yaml
+++ b/vulnerabilities/gitlab/gitlab-rce.yaml
@@ -49,4 +49,4 @@ requests:
         internal: true
         group: 1
         regex:
-          - 'csrf-token" content="(.*?)" />\n\n<meta'
+          - 'csrf-token" content="(.*?)" />'
