Update fingerprinthub-web-fingerprints.yaml (#3740)
Add locomoco fingerprint

--- a/technologies/fingerprinthub-web-fingerprints.yaml
+++ b/technologies/fingerprinthub-web-fingerprints.yaml
@@ -6979,6 +6979,11 @@ requests:
           - lnmp一键安装包
 
       - type: word
+        name: locomoco
+        words:
+          - Locomoco WebServer - <span style='color:blue'>RUN ( SUCCESS )
+
+      - type: word
         name: logsign-siem
         words:
           - window.location = '/ui/modules/login/'
