--- a/technologies/web-suite-detect.yaml
+++ b/technologies/web-suite-detect.yaml
@@ -20,8 +20,17 @@ requests:
       - type: word
         part: body
         words:
-          - 'href="http://www.bqe.com">BQE Software Inc.'
+          - 'www.bqe.com">BQE Software Inc.</a>'
+          - 'Web Suite'
+        condition: and
 
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - "Version: (.*)</span>"
