--- a/vulnerabilities/other/pollbot-redirect.yaml
+++ b/vulnerabilities/other/pollbot-redirect.yaml
@@ -4,13 +4,15 @@ info:
   author: Evan Rubinstien
   severity: medium
   description: Mozilla has a medium severity open redirect vulnerability in pollbot that could be used for social engineering attaks.
-  reference: https://bugzilla.mozilla.org/show_bug.cgi?id=1753838
-  tags: redirect,mozilla
+  reference:
+    - https://bugzilla.mozilla.org/show_bug.cgi?id=1753838
+    - https://github.com/mozilla/PollBot
+  tags: redirect,mozilla,pollbot
 
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/%oa/example.com/'
+      - '{{BaseURL}}/%0A/example.com/'
 
     matchers-condition: and
     matchers:
