--- a/exposed-panels/unauth-xproxy-dashboard.yaml
+++ b/exposed-panels/unauth-xproxy-dashboard.yaml
@@ -1,23 +1,26 @@
-id: unauthenticated-x-proxy-dashboard-detect
+id: unauth-xproxy-dashboard
 info:
   name: X-Proxy Dashboard Detect
   author: pussycat0x
-  severity: High
+  severity: high
   metadata:
     fofa-dork: "X-Proxy Dashboard"
-  tags: login, tech
+  tags: xproxy,panel
+
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: word
+        part: body
         words:
-          - 'Configurations</a>'
+          - '<title>X-Proxy</title>'
           - 'Dashboard</a>'
         condition: and
-        part: body
+
       - type: status
         status:
           - 200
