--- a/.github/workflows/new-templates.yml
+++ b/.github/workflows/new-templates.yml
@@ -22,15 +22,13 @@ jobs:
           git diff  --name-only --diff-filter=A $(git tag | tail -n 1) @ . | grep .yaml | tee .new-additions
 
       - name: Commit files
-        if: steps.new-additions.outputs.changes > 0
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .new-additions -f
-          git commit -m "Auto Generated New Template Addition List [$(date)] :robot:" -a
+          git commit --allow-empty -m "Auto Generated New Template Addition List [$(date)] :robot:" -a
 
       - name: Push changes
-        if: steps.new-additions.outputs.changes > 0
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
