added missing tags

--- a/vulnerabilities/wordpress/elex-woocommerce-xss.yaml
+++ b/vulnerabilities/wordpress/elex-woocommerce-xss.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: The plugin does not sanitise or escape the search GET parameter before outputting back in the page, leading to a reflected Cross-Site Scripting issue, which will be executed in a logged in admin context.
   reference: https://wpscan.com/vulnerability/647448d6-32c0-4b38-a40a-3b54c55f4e2e
-  tags: wordpress,wp-plugin,xss,wp,woocommerce
+  tags: wordpress,wp-plugin,xss,authenticated,woocommerce
 
 requests:
   - raw:
