--- a/vulnerabilities/wordpress/my-chatbot-xss.yaml
+++ b/vulnerabilities/wordpress/my-chatbot-xss.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: The plugin does not sanitise or escape its tab parameter in the Settings page before outputting it back in an attribute, leading to a Reflected Cross-Site Scripting issue.
   reference: https://wpscan.com/vulnerability/c0b6f63b-95d1-4782-9554-975d6d7bbd3d
-  tags: wordpress,wp-plugin,xss,wp
+  tags: wordpress,wp-plugin,xss,authenticated
 
 requests:
   - raw:
