--- a/vulnerabilities/wordpress/easy-social-feed.yaml
+++ b/vulnerabilities/wordpress/easy-social-feed.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: The plugin does not sanitise and escape a parameter before outputting back in an admin dashboard page, leading to a reflected Cross-Site Scripting issue which will be executed in the context of a logged admin or editor.
   reference: https://wpscan.com/vulnerability/6dd00198-ef9b-4913-9494-e08a95e7f9a0
-  tags: wordpress,wp-plugin,xss,wp
+  tags: wordpress,wp-plugin,xss,authenticated
 
 requests:
   - raw:
