--- a/vulnerabilities/wordpress/ninjaform-open-redirect.yaml
+++ b/vulnerabilities/wordpress/ninjaform-open-redirect.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: The wp_ajax_nf_oauth_connect AJAX action was vulnerable to open redirect due to the use of a user supplied redirect parameter and no protection in place.
   reference: https://wpscan.com/vulnerability/6147acf5-e43f-47e6-ab56-c9c8be584818
-  tags: wordpress,redirect,wp-plugin,ninjaform,wp,authenticated
+  tags: wordpress,redirect,wp-plugin,ninjaform,authenticated
 
 requests:
   - raw:
