--- a/vulnerabilities/wordpress/wp-whmcs-xss.yaml
+++ b/vulnerabilities/wordpress/wp-whmcs-xss.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: The plugin does not sanitise and escape the error parameter before outputting it back in admin dashboard, leading to a Reflected Cross-Site Scripting
   reference: https://wpscan.com/vulnerability/4aae2dd9-8d51-4633-91bc-ddb53ca3471c
-  tags: wordpress,wp-plugin,wp,whmcs,xss
+  tags: wordpress,wp-plugin,authenticated,whmcs,xss
 
 requests:
   - raw:
