--- a/technologies/strapi-cms-detect.yaml
+++ b/technologies/strapi-cms-detect.yaml
@@ -13,12 +13,15 @@ requests:
     path:
       - "{{BaseURL}}/admin/init"
 
+    matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
           - '"data"'
           - '"uuid"'
+          - '"hasAdmin"'
+        condition: and
 
       - type: status
         status:
