--- a/technologies/strapi-cms-detect.yaml
+++ b/technologies/strapi-cms-detect.yaml
@@ -2,7 +2,7 @@ id: strapi-cms-detect
 
 info:
   name: Strapi CMS detect
-  author: cyllective,daffainfo
+  author: cyllective,daffainfo,idealphase
   severity: info
   description: Open source Node.js Headless CMS to easily build customisable APIs
   reference: https://github.com/strapi/strapi
