Updated strapi-cms-detect.yaml (#3756)
* Updated strapi-cms-detect.yaml

Add exact keyword to template to help reduce false positive

* Update strapi-cms-detect.yaml

Add myname in author section.

--- a/technologies/strapi-cms-detect.yaml
+++ b/technologies/strapi-cms-detect.yaml
@@ -2,7 +2,7 @@ id: strapi-cms-detect
 
 info:
   name: Strapi CMS detect
-  author: cyllective,daffainfo
+  author: cyllective,daffainfo,idealphase
   severity: info
   description: Open source Node.js Headless CMS to easily build customisable APIs
   reference: https://github.com/strapi/strapi
@@ -13,12 +13,15 @@ requests:
     path:
       - "{{BaseURL}}/admin/init"
 
+    matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
           - '"data"'
           - '"uuid"'
+          - '"hasAdmin"'
+        condition: and
 
       - type: status
         status:
