--- a/exposed-panels/otobo-panel.yaml
+++ b/exposed-panels/otobo-panel.yaml
@@ -4,6 +4,10 @@ info:
   name: OTOBO Login Panel
   author: princechaddha
   severity: info
+  description: OTOBO is one of the most flexible web-based ticketing systems used for Customer Service, Help Desk, IT Service Management.
+  reference: https://github.com/rotheross/otobo
+  metadata:
+    shodan-query: http.title:"otobo"
   tags: panel,otobo
 
 requests:
