--- a/vulnerabilities/wordpress/qards-ssrf.yaml
+++ b/vulnerabilities/wordpress/qards-ssrf.yaml
@@ -6,8 +6,7 @@ info:
   metadata:
     google-dork:inurl:"plugins/qards"
   description: Qards provides you easy option to drag and edit every part and element of your site in the front-end, you will never have to write any code to change the layout or to change any part of the site like the traditional WordPress way.
-  reference:
-    -https://wpscan.com/vulnerability/454a0ce3-ecfe-47fc-a282-5caa51370645
+  reference: https://wpscan.com/vulnerability/454a0ce3-ecfe-47fc-a282-5caa51370645
   tags: wordpress,ssrf
 requests:
   - method: GET
